--- a/src/pages/Projects.css
+++ b/src/pages/Projects.css
@@ -224,7 +224,7 @@
 
 .project-stats {
   background-color: var(--light-grey);
-  padding: 60px 0;
+  padding: 60px 40px;
   border-radius: 16px;
   margin-top: 80px;
 }
